# Shiny

./: .gitignore  CMakeLists.txt  Makefile  README.rdoc  Shiny_vs2003.ncb  Shiny_vs2005.sln
Compact/: RunMe.bat  Shiny.cpp  Shiny.h
Samples/Recursion/: Recursion.cpp
Samples/Simple/: Simple.cpp
doc/: RunMe.bat  doxygen.cfg
include/: Shiny.h  ShinyConfig.h  ShinyData.h  ShinyDoc.h  ShinyMacros.h  ShinyManager.h  ShinyNode.h  ShinyNodePool.h  ShinyOutput.h  ShinyPrereqs.h  ShinyTools.h  ShinyZone.h
lib/config/: config.h  config.h.in  config_cmake.h.in  config_define.h  config_function.h  config_header.h  config_knobs.h  config_version.h
src/: ShinyManager.cpp  ShinyNode.cpp  ShinyNodePool.cpp  ShinyOutput.cpp  ShinyTools.cpp
trunk/: Shiny.sln  Shiny_vs2003.sln  Shiny_vs2008.sln  makefile.defs
trunk/Samples/Advanced/: Advanced.cpp  Demo_Advanced.vcproj  Main.cpp  Shared.h
trunk/Samples/MainLoop/: Demo_MainLoop.vcproj  MainLoop.cpp
trunk/Samples/Recursion/: Demo_Recursion.vcproj  Recursion.cpp
trunk/Samples/Simple/: Demo_Simple.vcproj  Simple.cpp
trunk/Shiny/doc/: footer.html
trunk/Shiny/include/: Shiny.h  ShinyConfig.h  ShinyData.h  ShinyDoc.h  ShinyMacros.h  ShinyManager.h  ShinyNode.h  ShinyNodePool.h  ShinyNodeState.h  ShinyOutput.h  ShinyPrereqs.h  ShinyTools.h  ShinyZone.h
trunk/Shiny/scripts/: Shiny.vcproj
trunk/Shiny/src/: ShinyManager.c  ShinyNode.c  ShinyNodePool.c  ShinyNodeState.c  ShinyOutput.c  ShinyTools.c  ShinyZone.c
trunk/ShinyLua/include/: ShinyLua.h
trunk/ShinyLua/src/: ShinyLua.cpp
trunk/ShinyOgre/include/: ShinyOgre.h
trunk/ShinyOgre/scripts/: ShinyOgre.vcproj
trunk/ShinyOgre/src/: ShinyOgre.cpp
trunk/doc/: RunMe.sh
trunk/include/: Shiny.h  ShinyConfig.h  ShinyData.h  ShinyDoc.h  ShinyMacros.h  ShinyManager.h  ShinyNode.h  ShinyNodePool.h  ShinyNodeState.h  ShinyOutput.h  ShinyPrereqs.h  ShinyTools.h  ShinyZone.h
trunk/lib/: Shiny.lib  ShinyDebug.lib
trunk/src/: Shiny.vcproj  ShinyManager.c  ShinyManager.cpp  ShinyNode.c  ShinyNode.cpp  ShinyNodePool.c  ShinyNodePool.cpp  ShinyNodeState.c  ShinyOutput.c  ShinyOutput.cpp  ShinyTools.c  ShinyTools.cpp  ShinyZone.c  ShinyZone.cpp  Shiny_vs2003.vcproj  Shiny_vs2005.vcproj  Shiny_vs2008.vcproj
